--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slider": "^2.0.4",
     "react-spinners": "^0.13.8",
     "react-stripe-checkout": "^2.6.3",
@@ -48,7 +48,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/",
   "devDependencies": {
     "source-map-loader": "^4.0.1"
   }
